# web_hw10

./: main.py  pyproject.toml
hw_project/: .env  db.sqlite3
hw_project/hw_project/: settings.py  urls.py
hw_project/quotes/: forms.py  models.py  urls.py  views.py
hw_project/quotes/migrations/: 0001_initial.py  0002_alter_tag_name.py
hw_project/quotes/static/quotes/: style.css
hw_project/quotes/templates/quotes/: add_author.html  add_quote.html  add_tag.html  author_detail.html  base.html  index.html  tag_quotes.html
hw_project/quotes/templatetags/: extract.py
hw_project/staticfiles/quotes/: style.css
hw_project/users/: urls.py  views.py
hw_project/users/templates/users/: logout.html  signin.html  signup.html
hw_project/utils/: add_quotes_to_mongo.py  authors.json  migration.py
