[tool.poetry]
name = "web-hw10"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "web_hw10"}]

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.3.3"
django = "^4.2"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
